modules/015-admission-policy-engine/templates/policies/baseline/host-namespaces/ctemplate.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8psshostnamespaces
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: pod-security-standard
  annotations:
    metadata.gatekeeper.sh/title: "Host Namespace"
    description: >-
      Disallows sharing of host PID, Network and IPC namespaces by pod containers.
      Corresponds to the `hostPID`, `hostNetwork` and `hostIPC` fields in a PodSecurityPolicy.
      For more information, see
      https://kubernetes.io/docs/concepts/security/pod-security-standards/
spec:
  crd:
    spec:
      names:
        kind: D8PSSHostNamespaces
      validation:
        openAPIV3Schema:
          type: object
          description: >-
            Disallows sharing of host PID, Network and IPC namespaces by pod containers.
            Corresponds to the `hostPID`, `hostNetwork` and `hostIPC` fields in a PodSecurityPolicy.
            For more information, see
            https://kubernetes.io/docs/concepts/security/pod-security-standards/
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package d8.pod_security_standards

        violation[{"msg": msg, "details": {}}] {
            input_share_hostnamespace(input.review.object)
            msg := sprintf("Sharing the host namespace is not allowed: %v", [input.review.object.metadata.name])
        }

        input_share_hostnamespace(o) {
            o.spec.hostPID
        }
        input_share_hostnamespace(o) {
            o.spec.hostIPC
        }
        input_share_hostnamespace(o) {
            o.spec.hostNetwork
        }
